# SNN_ANN

./: .gitignore  README.md  hybrid_snn_ann_implementation_guide.md  pyproject.toml  tasks.md
configs/: gen1_config.yaml
scripts/: download_gen1.sh  evaluate.py
src/: __init__.py  train.py
src/data/: __init__.py  event_representation.py  gen1_dataset.py
src/models/: __init__.py  ann_backbone.py  asab_module.py  hybrid_model.py  plif_neuron.py  snn_backbone.py  yolox_head.py
src/utils/: __init__.py  losses.py  metrics.py
