[project]
name = "hybrid-snn-ann"
version = "0.1.0"
description = "Hybrid SNN-ANN for Event-Based Object Detection (Ahmed et al.)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "spikingjelly>=0.0.0.0.14",
    "h5py>=3.9.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "tensorboard>=2.15.0",
    "scipy>=1.11.0",
    "pycocotools>=2.0.7",
    "einops>=0.7.0",
    "numba>=0.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]
